infra/k8s/overlays/team-04/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qoomlee-team-04-dev
  labels:
    team: team-04
